# octave-audio

./: .gitignore  DESCRIPTION  INDEX  Makefile  NEWS  README.md  _config.yml  aucapture.m  auload.m  auplot.m  aurecord.cc  ausave.m  clip.m  configure.add  endpoint.cc  endpoint.h  feed.xml  octave-audio.metainfo.xml  sound.m  wavread.m  wavwrite.m
_layouts/: default.html  overview.html
audio/: functions.md  index.md  manual.md  news.md
audio/functions/: audioEnvelope.md  audioOscillator.md  bark2hz.md  dsp.AudioFileReader.md  erb2hz.md  hz2bark.md  hz2erb.md  hz2mel.md  ismidifile.md  mel2hz.md  midicallback.md  midicontrols.md  mididevice.md  mididevinfo.md  midifileinfo.md  midifileread.md  midifilewrite.md  midiflush.md  midiid.md  midimsg.md  midimsgtype.md  midiread.md  midireceive.md  midisend.md  midisync.md  phon2sone.md  pinknoise.md  sone2phon.md  sweeptone.md
audio/functions/@octave_midi/: hasdata.md
devel/: ctrl_monitor.m  play_midi.m  record_midi.m
doc/: audio.texi  mkdoccache.m  mkfuncdocs.py  mkqhcp.py  octave.css
inst/: PKG_ADD  PKG_DEL  __load_audio__.m  __unload_audio__.m  au.m  aucapture.m  audio.m  audioEnvelope.m  audioOscillator.m  auload.m  auplot.m  aurecord.m  ausave.m  bark2hz.m  clip.m  erb2hz.m  hz2bark.m  hz2erb.m  hz2mel.m  ismidifile.m  mel2hz.m  midicallback.m  midicontrols.m  mididevice.m  mididevinfo.m  midifileinfo.m  midifileread.m  midifilewrite.m  midiflush.m  midiid.m  midimsg.m  midimsgtype.m  midiread.m  midireceive.m  midisend.m  midisync.m  phon2sone.m  pinknoise.m  sone2phon.m  sound.m  (+2 more)
inst/+dsp/: AudioFileReader.m
inst/@midimsg/: properties.m
inst/@octave_midi/: hasdata.m
inst/data/: c_maj_melody.mid
inst/private/: getvariable.m  makevariable.m  readheader.m  setvariable.m  writeheader.m
src/: FILES  Makeconf.add  Makeconf.in  Makefile  Makefile.in  Makefile.linux  Makefile.macosx  OFSndPlay.cc  aurecord.cc  autogen.sh  bootstrap  config.h.in  configure.ac  configure.base  endpoint.cc  endpoint.h  midi.cc  midi.h  midi_object.cc  midi_object.h  midicallback.cc  mididevice.cc  mididevinfo.cc  midiflush.cc  midirecv.cc  midisend.cc  midistat.cc  pkglock.cc
src/m4/: octave-forge.m4
